# template-cpp

./: .gitmodules  CMakeLists.txt
include/: template_namespace.h
src/: main.cpp
tests/: CMakeLists.txt  test_example.cpp
